<resources>
    <string name="app_name">Chilldev</string>
    <string name="child_gender_label">Пол ребёнка</string>
    <string name="child_gender_description">Это поможет нам сделать рекомендации точнее</string>
    <string name="child_gender_skip">Неважно</string>
    <string name="child_gender_female">Девочка</string>
    <string name="child_gender_male">Мальчик</string>
    <string name="child_gender_next_view_label">…и дата рождения</string>
    <string name="movie_age_label" translatable="false">Какое кино будем показывать?</string>
    <string name="kid_interests_text_hint" translatable="false">Что ребёнку интересно</string>
    <string name="movie_age_zero" translatable="false">0+</string>
    <string name="movie_age_six" translatable="false">6+</string>
    <string name="movie_age_twelve" translatable="false">12+</string>
    <string name="movie_age_sixteen" translatable="false">16+</string>
    <string name="movie_age_eighteen" translatable="false">18+</string>
    <string name="movie_age_next_view_label">Пол ребенка</string>
    <string name="last_screen_message">Поздравляем! Вы успешно создали детский аккаунт =)</string>
    <string name="and_birthday">&#8230; and birthday day</string>
    <string name="day">DD</string>
    <string name="month">MM</string>
    <string name="year">YYYY</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="access_to_applications_and_sites">Доступ к приложениям и сайтам</string>
    <string name="screen_pin_title">ПИН-код</string>
    <string name="screen_pin_description">Хотите защитить выход из детского профиля?\nПридумайте ПИН-код из четырёх символов.</string>
    <string name="screen_pin_confirm">Повторите\n</string>
    <string name="screen_pin_enter">Введите ПИН для выхода \nиз детского профиля</string>
    <string name="screen_pin_done">Не хочу задавать ПИН-код</string>
    <string name="screen_pin_error_text">ПИН-коды не совпадают!</string>
    <string name="screen_pin_transfer_error">Не удалось передать данные!\nПроверьте, что вы используете Яндекс ТВ</string>
    <string name="screen_congratulation">Поздравляем, вы подключили детский режим!</string>
    <string name="next_fragment_text_view">Какое кино будем показывать?</string>
    <string name="kid_name_text_view">Как зовут ребёнка?</string>
    <string name="app_access_hint">Доступ к сайтам и приложениям</string>
    <string name="create_account">Создать профиль</string>
    <string name="check_information">Проверим?</string>
    <string name="limitation">Ограничение</string>
    <string name="gender">Пол</string>
    <string name="saved_kid_name">Зайка</string>
    <string name="saved_limitation" translatable="false">6+</string>
    <string name="saved_gender">Неважно</string>
    <string name="kid_interests">Что ребёнку интересно?</string>
    <string name="check_name_text_view">Вовочка, </string>
    <string name="check_age_text_view">4 года, </string>
    <string name="limitation_text_view">Ограничение:</string>
    <string name="check_limitation_text_view">6+</string>
    <string name="check_gender_text_view">мальчик</string>
    <string name="kid_interests_text_view">Что интересно?</string>
    <string name="name_hint">Зайка</string>
    <string name="check_kid_interests">Я познаю мир, Приключения, Животные, На английском языке</string>
    <string name="confirm_sites_text_view">Разрешённые приложения и сайты</string>
    <string name="check_confirm_sites">Дублирование экрана, Медиаплеер</string>
    <string name="check_kid_age">%d+</string>
    <string name="check_no_info">-</string>
    <string name="create_account_btn">Создать профиль ребёнка</string>
    <string name="cancel">Отмена</string>
    <string name="fragment_title_5">Что ребёнку интересно?</string>
    <string name="fragment_title_6">Выберите к каким сайтам и приложениям дать доступ</string>
    <string name="create_profile_text">Создать профиль</string>
    <string name="day_message_error">Day is not existed :(</string>
    <string name="month_message_error">Month is not exsisted :(</string>
    <string name="choose_account_label">Кто будет смотреть?</string>
    <string name="choose_account_logout_label">Выйти из аккаунта</string>
    <string name="choose_account_configure_mode_label">Настройки детского режима</string>
    <string name="choose_account_add_profile_label">Добавить профиль</string>
    <string name="all">All</string>
</resources>