<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <Button
        android:id="@+id/pin_btn_1"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="24sp" />

    <Button
        android:id="@+id/pin_btn_2"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textSize="24sp" />
    <Button
        android:id="@+id/pin_btn_3"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textSize="24sp" />
    <Button
        android:id="@+id/pin_btn_4"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:textSize="24sp" />
    <Button
        android:id="@+id/pin_btn_5"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textSize="24sp" />
    <Button
        android:id="@+id/pin_btn_6"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:textSize="24sp" />
    <Button
        android:id="@+id/pin_btn_7"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textSize="24sp" />
    <Button
        android:id="@+id/pin_btn_8"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:textSize="24sp" />
    <Button
        android:id="@+id/pin_btn_9"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textSize="24sp" />
    <Button
        android:id="@+id/pin_btn_0"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/pin_btn_del"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clear"
        tools:ignore="ContentDescription" />
</LinearLayout>