<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_gender_label"
        app:layout_constraintBottom_toTopOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/child_gender_description"
        app:layout_constraintBottom_toTopOf="@id/rgGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvNextScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription">

        <RadioButton
            android:id="@+id/rbSkip"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/child_gender_skip" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/child_gender_female" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/child_gender_male" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvNextScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/child_gender_next_view_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>