<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.birthday.BirthdayFragment">


    <TextView
        android:id="@+id/birthday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/and_birthday"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.zelyder.chilldev.ui.customkeyboard.CustomNumKeyboard
        android:id="@+id/numPad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/next_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/access_to_applications_and_sites"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_title">

        <EditText
            android:id="@+id/day"
            android:focusable="false"
            android:layout_width="65dp"
            android:layout_height="53dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/day"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:nextFocusRight="@id/month" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:text="/"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/month"
            android:layout_width="65dp"
            android:layout_height="53dp"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/month"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:nextFocusRight="@id/year" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:text="/"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/year"
            android:focusable="false"
            android:layout_width="65dp"
            android:layout_height="53dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/year"
            android:inputType="numberDecimal"
            android:maxLength="4" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>